# game-framework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Components.hpp  Entity.hpp  Game.hpp  LogicSystems.hpp  Scene.hpp  TextRenderer.hpp  TextureManager.hpp  TickTimer.hpp  aabb.hpp
src/: Game.cpp  Scene.cpp  TextureManager.cpp  TickTimer.cpp
